<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/thinking" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        style="@style/HighScoreCardStyle"
        >

        <LinearLayout
            style="@style/LinearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_score"
                style="@style/HighScoreTextStyle" />

            <TextView
                android:id="@+id/textViewHighestScore"
                style="@style/HighScoreTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_score" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        style="@style/LinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:theme="@style/MenuPlayButtonStyle" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_spacing" />

        <Button
            android:id="@+id/buttonQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"

            android:theme="@style/MenuQuitButtonStyle" />

    </LinearLayout>


</LinearLayout>